# uiuc_hep_muography_geant4_simulation

./: CMakeLists.txt  README.md  plot_average_max_yield.py  plot_reflectivity_yield.py  plot_total_energy_per_event.py  reflectivity_yield_median.csv  sim_bc408_1.cc
data/: 1000EVENTSHITS_output_nt_Hits.csv  1_2_output_nt_Hits copy.textClipping  1_4_entries.csv  average_max_yield_entries.csv  output_events_hist.csv  output_nt_Hits.csv  plot_reflectivity_yield.py  plot_total_energy_per_event.py  reflectivity_yield_median.csv
include/: Action.hh  Detector.hh  DetectorConstruction.hh  EventAction.hh  Generator.hh  Physics.hh  RunAction.hh  SteppingAction.hh
post-analysis-scripts/: plot_average_max_yield.py  plot_total_energy_per_event.py
reflectivity trials truth records/light yeild per muon over 100 muons truth record excel files/: 0_65_output_events_hist.xlsx  0_70_output_events_hist.xlsx  0_75_output_events_hist.xlsx  0_80_output_events_hist.xlsx  0_85_output_events_hist.xlsx  0_90_output_events_hist.xlsx  0_95_output_events_hist.xlsx  1_0_output_events_hist.xlsx
src/: Action.cc  Detector.cc  DetectorConstruction.cc  EventAction.cc  Generator.cc  Physics.cc  RunAction.cc  SteppingAction.cc
